<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License
  -->
<resources>
    <string name="purchase">Purchase</string>
    <string name="item_title">Gucci backpack</string>
    <string name="item_price">$1500</string>
    <string name="item_description">Gucci backpack in signature GG Supreme canvas and leather.</string>
    <string name="purchase_done">Device credential confirmed.</string>

    //Categories
    <string name ="backpack">Backpack</string>
    <string name ="shoe">Shoe</string>
    <string name ="pant">Pant</string>
    <string name ="clothes">Clothes</string>
    <string name ="Accessory">Accessories</string>


    <string name = "ItemImage1">image1</string>
    <string name = "ItemImage2">image2</string>
    <string name = "ItemName1">Gucci Backpack</string>
    <string name = "ItemName2">Northface Backpack</string>

    //Backpack
    <string name ="Gucci">Gucci</string>
    <string name ="North_Face">North Face</string>
    
    <plurals name="already_confirmed_device_credentials_within_last_x_seconds">
        <item quantity="one">The device credential has been already confirmed within the last
            %1$d second.</item>
        <item quantity="other">The device credential has been already confirmed within the last
            %1$d seconds.</item>
    </plurals>
    <string name="description_bugdroid_icon">Android bugdroid image</string>
    <string name="banner">banner_icon</string>
    <string name ="back">Back</string>

    //All items found text
    <string name = "result_text">All found</string>

</resources>
